--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -51,11 +51,13 @@ h4 {
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    list-style: none;
+    list-style-type: none;
     display: none;
     margin-top: 17px;
     position: absolute;
-    z-index: 1;
+    top: 76%;
+    
+   
     box-sizing: border-box;
     padding: 30px 50px 30px 0;
 }
@@ -64,17 +66,33 @@ ul, li {
 }
 ul.popover ul li h2 {
     font-size: 16px;
+    line-height: 1ex;
+    padding-bottom: 0;
+    margin-bottom: 1px;
 }
 .locations:hover > .popover{
     display: block;
+
 }
 .locations:hover > .popover ul,li{
     display: block;
-    position: relative;
+    padding-left: 5px;
+}
+.locations:hover > .popover ul{
+    line-height: 1em;
 }
 .amenities:hover > .popover{
     display: block;
 }
+.amenities:hover .popover > ul,li{
+    display: block;
+    font-size:1em;
+    margin-left: 15px;
+}
 .locations > .popover > li > ul > li {
-    margin-bottom: 10px;
+    line-height: 1px;
+    margin-left: 5px;
+}
+ul li{
+    font-size: small;
 }
