--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -12,13 +12,15 @@
     width: 100%;
 }
 .places > article {
-    display: flex;
     justify-content: center;
     width: 390px;
     padding: 20px;
     margin: 20px;
     border: 1px solid #FF5A5F;
     border-radius: 4px;
+    display: inline-block;
+    text-align: center;
+    position: relative;
 }
 .places > article > h2 {
     font-size: 30px;
@@ -27,19 +29,59 @@
 }
 .price_by_night {
     color: #FF5A5F;
-    border: 1px solid  #FF5A5F;
-    border-radius: 4px;
+    border: 4px solid  #FF5A5F;
+    border-radius: 50%;
     height: 60px;
+    min-width: 60px;
     font-size: 30px;
-    position: relative;
-    top: 0;
-    text-align: right;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    text-align: center;
+    line-height: 60px;
+    
 }
 .information {
+    display: flex;
     height: 80px;
     border-top: 1px solid  #DDDDDD;
     border-bottom: 1px solid  #DDDDDD;
+    justify-content:center;
+    align-items:top center;
 }
-.information > max_quest {
-    
+.max_quest, .number_rooms, .number_bathrooms{
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-position: top center;
+}
+.max_quest  {
+    background: url("../images/icon_group.png");
+    background-repeat: no-repeat; 
+    background-position: top; 
+}
+.number_rooms {
+    background: url("../images/icon_bed.png");
+    background-repeat: no-repeat; 
+    background-position: top; 
+}
+.number_bathrooms {
+    background: url("../images/icon_bath.png"); 
+    background-repeat: no-repeat;
+    background-position: top; 
+}
+.number_bathrooms h4, .max_quest h4, .number_rooms h4{
+    display: inline-flex;
+    align-self:flex-end;
+}
+.user{
+    display: flex;
+    padding: 20px;
+}
+.user p {
+    margin-left: 5px;
+}
+.description {
+    text-align: left;
 }
