--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -59,21 +59,23 @@
 .max_quest  {
     background: url("../images/icon_group.png");
     background-repeat: no-repeat; 
-    background-position: top; 
+    background-position: center; 
 }
 .number_rooms {
     background: url("../images/icon_bed.png");
     background-repeat: no-repeat; 
-    background-position: top; 
+    background-position: center; 
 }
 .number_bathrooms {
     background: url("../images/icon_bath.png"); 
     background-repeat: no-repeat;
-    background-position: top; 
+    background-position: center; 
 }
 .number_bathrooms h4, .max_quest h4, .number_rooms h4{
     display: inline-flex;
     align-self:flex-end;
+    margin-left: 0;
+   
 }
 .user{
     display: flex;
