--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -79,10 +79,17 @@
 }
 .user{
     display: flex;
-    padding: 20px;
+    margin-top: 20px;
+    padding-left: 0px;
+    padding-bottom: 0;
+
 }
 .user p {
-    margin-left: 5px;
+    margin-left: 0px;
+    margin-top: 20px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    line-height: 0;
 }
 .description {
     text-align: left;
